k8s/00-namespace-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vitalsedge
  labels:
    name: vitalsedge
    monitoring: enabled
