k8s/05-monitoring.yaml
apiVersion: v1
kind: Service
metadata:
  name: vitalsedge-monitoring
  namespace: vitalsedge
  labels:
    app: prometheus
spec:
  selector:
    app: vitalsedge-backend
  ports:
  - name: metrics
    port: 9090
    targetPort: 9090
